src/objects/Account_Stage__c.object
<CustomObject>
    <description>This object is a child of the Account object and is used for tracking stage changes in the Account table</description>
    <fields>
        <fullName>AccountID__c</fullName>
        <label>Account ID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Stages</relationshipLabel>
        <relationshipName>Account_Stages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <description>This field represents the difference (in days) between the Start date and the end date fields.</description>
        <formula>IF(IsBlank(End_date__c),Now() - Start_date__c, End_date__c - Start_date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_date__c</fullName>
        <description>This is the date and time when the account stage changed to something different.</description>
        <label>End date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Stage_Changed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field indicates which user changed the stage to this value</inlineHelpText>
        <label>Stage Changed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Stages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Stage</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_date__c</fullName>
        <description>This is the date and time when the account stage began</description>
        <label>Start date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <label>Account Stage</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>OBJECT_ID</columns>
        <columns>AccountID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Account Stage ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Stages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>